unpackaged/main/default/objects/litify_docs__File_View_Field_Preferences__c/litify_docs__File_View_Field_Preferences__c.object-meta.xml
<CustomObject>
    <description>Custom Object to support storing administrative and configuration settings.</description>
    <label>File View Field Preferences</label>
    <nameField>
        <displayFormat>FIELDS-{000000}</displayFormat>
        <label>File View Field Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File View Field Preferences</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>