unpackaged/main/default/objects/litify_docs__File_View_Field_Preferences__c/fields/litify_docs__Default_Sort_Ascending__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Default_Sort_Ascending__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True = Ascending; False = Descending</description>
    <label>Default Sort Ascending</label>
    <type>Checkbox</type>
</CustomField>