unpackaged/main/default/objects/litify_docs__File_View_Field_Preferences__c/fields/litify_docs__Default_Sort_Column__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Default_Sort_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field API name of the default sort column used for the View &amp; Columns datatable</description>
    <label>Default Sort Column</label>
    <type>Checkbox</type>
</CustomField>