unpackaged/main/default/objects/litify_docs__File_View_Field_Preferences__c/fields/litify_docs__Enabled__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>