unpackaged/main/default/objects/litify_docs__File_View_Field_Preferences__c/fields/litify_docs__File_System_Preferences__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__File_System_Preferences__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File System Preferences</label>
    <referenceTo>litify_docs__File_System_Preferences__c</referenceTo>
    <relationshipLabel>File View Field Preferences</relationshipLabel>
    <relationshipName>File_View_Field_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>