unpackaged/main/default/objects/litify_docs__File_View_Field_Preferences__c/fields/litify_docs__Order__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Order__c</fullName>
    <label>Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>