unpackaged/main/default/objects/litify_docs__File_View_Field_Preferences__c/fields/litify_docs__Required__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>