unpackaged/main/default/objects/litify_docs__File_View_Field_Preferences__c/fields/litify_docs__View_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__View_Name__c</fullName>
    <label>View Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>